test_regress/t/t_gen_missing_bad.out
%Error: t/t_gen_missing.v:43:20: Cannot find file containing module: 'foo_not_needed'
                   foo_not_needed i_foo(.x(foo[j]), .y(bar[j]));
                   ^~~~~~~~~~~~~~
        ... Looked in:
             t/foo_not_needed
             t/foo_not_needed.v
             t/foo_not_needed.sv
             obj_dir//foo_not_needed
             obj_dir//foo_not_needed.v
             obj_dir//foo_not_needed.sv
             ../include/foo_not_needed
             ../include/foo_not_needed.v
             ../include/foo_not_needed.sv
             foo_not_needed
             foo_not_needed.v
             foo_not_needed.sv
             obj_vlt/t_gen_missing_bad/foo_not_needed
             obj_vlt/t_gen_missing_bad/foo_not_needed.v
             obj_vlt/t_gen_missing_bad/foo_not_needed.sv
%Error: Exiting due to
